# Byteland

./: .gitignore  README.md  main.cpp
Codigos/: main.cpp
FPS/: CMakeLists.txt
FPS/src/: ConvertSketch.cpp  DegToRad.cpp  GetDegrees.cpp  Main.cpp  Map.cpp  MapCollision.cpp  Player.cpp  RadToDeg.cpp  Steven.cpp
FPS/src/Headers/: Map.hpp  Player.hpp  Steven.hpp
clases/: Arma.h  Jugador.h  enemigo.h
proyecto/: CMakeLists.txt
proyecto/CCOMP1-SFML-master/: CMakeLists.txt
proyecto/CCOMP1-SFML-master/src/: colision_mapa.cpp  main.cpp  player.cpp
proyecto/byteland/: byteland.sln
proyecto/byteland++/CCOMP1-SFML-master/: CMakeLists.txt
proyecto/byteland++/CCOMP1-SFML-master/src/: Colision_mapa.hpp  Player.hpp  convertir_escena.cpp  grados_a_radianes.cpp  player.cpp
proyecto/byteland/byteland/: Convertir_escena.hpp  Enemigo.cpp  Enemigo.hpp  Global.hpp  Grados_a_Radianes.hpp  Player.cpp  Player.hpp  Radianes_a_grados.cpp  Tomar_Grados.hpp  byteland.vcxproj  byteland.vcxproj.filters  colision_mapa.cpp  convertir_escena.cpp  main.cpp  tomar_grados.cpp
proyecto/byteland/byteland/Debug/byteland.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  byteland.lastbuildstate
proyecto/byteland/byteland/x64/Debug/: byteland.exe.recipe  byteland.ilk  byteland.recipe  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command  vc143.idb
proyecto/byteland/byteland/x64/Debug/byteland.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  byteland.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
proyecto/src/: Radianes_a_grados.hpp  colision_mapa.cpp  enemigo.cpp  main.cpp  radianes_a_grados.cpp
